--- a/srv/zones.ini
+++ b/srv/zones.ini
@@ -1,14 +1,14 @@
 #this file has to be adapted and moved to CFGPATH or CFGPATH has to be adapted
 [dyn.domain1.com]
-server = "ns1.domain1.com"
-keyname = "ddns-update-key"
-keyalgo = "hmac-sha512"
-key = "laskd234lksdf0i33wokWQ352O345QLDsdy9CSw=="
-ttl = 60
+server  = ns1.domain1.com
+keyname = ddns-update-key
+keyalgo = hmac-sha512
+key     = laskd234lksdf0i33wokWQ352O345QLDsdy9CSw==
+ttl     = 60
 
 [dyn.domain2.com]
-server = "ns1.domain2.com"
-keyname = "ddns-update-key"
-keyalgo = "hmac-sha512"
-key = "AjaksdjalsdasdADALKsjAskdasjdase912ekajds923rnasf=="
-ttl = 60
+server  = ns1.domain2.com
+keyname = ddns-update-key
+keyalgo = hmac-sha512
+key     = AjaksdjalsdasdADALKsjAskdasjdase912ekajds923rnasf==
+ttl     = 60
