--- a/etc-example/users.ini
+++ b/etc-example/users.ini
@@ -1,3 +1,3 @@
 [user1]
 password  = generateMeWithAddUser
-hostnames = host1.domain.com,host2.domain2.com
+hostnames = host1.dyn.example,host2.dyn.example2.com
