--- a/etc-example/zones.ini
+++ b/etc-example/zones.ini
@@ -1,13 +1,13 @@
 #this file has to be adapted and moved to CFGPATH or CFGPATH has to be adapted
-[dyn.domain1.com]
-server  = ns1.domain1.com
+[dyn.example.com]
+server  = ns1.example.com
 keyname = ddns-update-key
 keyalgo = hmac-sha512
 key     = laskd234lksdf0i33wokWQ352O345QLDsdy9CSw==
 ttl     = 60
 
-[dyn.domain2.com]
-server  = ns1.domain2.com
+[dyn.example2.com]
+server  = ns1.example2.com
 keyname = ddns-update-key
 keyalgo = hmac-sha512
 key     = AjaksdjalsdasdADALKsjAskdasjdase912ekajds923rnasf==
