commit empty etc/ for convenience

--- a/etc-example/users.ini
+++ b/etc-example/users.ini
@@ -1,3 +1,4 @@
+#this file has to be adapted and moved to ../etc or CFGPATH has to be adapted
 [user1]
 password  = generateMeWithAddUser
 hostnames = host1.dyn.example,host2.dyn.example2.com
