--- a/etc-example/zones.ini
+++ b/etc-example/zones.ini
@@ -1,4 +1,4 @@
-#this file has to be adapted and moved to CFGPATH or CFGPATH has to be adapted
+#this file has to be adapted and moved to ../etc or CFGPATH has to be adapted
 [dyn.example.com]
 server  = ns1.example.com
 keyname = ddns-update-key
